kubernetes&Docker/k8s/myinvoices-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myinvoices-ingress
spec:
  rules:
  - host: myinvoices
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: myinvoice-service
            port: 
              number: 8080
